@@ -1,0 +1,2 @@
+Hash is: %(a => 'apple', c => 'cats', b => 'bats')
+Expression is: 2
