@@ -1,1 +1,5 @@
 192.168.1.1 and 3232235777
+255.255.255.255 and 4294967295 and 4294967295
+128.129.130.131 and 2155971203 and 2155971203
+0.0.0.1 and 1 and 1
+1.0.0.0 and 16777216 and 16777216
